--- a/index.html
+++ b/index.html
@@ -123,14 +123,14 @@
        
 
         <th>2</th>
-        <td class="white"><img src="images/torre.png" ></td>
-        <td class="black"><img src="images/cavallo bianco.png"></td>
-        <td class="white"><img src="images/alfiere.png"></td>
-        <td class="black"><img src="images/re.png"></td>
-        <td class="white"><img src="images/regina.bianca.png"></td>
-        <td class="black"><img src="images/alfiere.png"></td>
-        <td class="white"><img src="images/cavallo bianco.png"></td>
-        <td class="black"><img src="images/torre.png"></td>
+        <td class="white"><img src="images/pedone bianco (1).png" ></td>
+        <td class="black"><img src="images/pedone bianco (1).png"></td>
+        <td class="white"><img src="images/pedone bianco (1).png"></td>
+        <td class="black"><img src="images/pedone bianco (1).png"></td>
+        <td class="white"><img src="images/pedone bianco (1).png"></td>
+        <td class="black"><img src="images/pedone bianco (1).png"></td>
+        <td class="white"><img src="images/pedone bianco (1).png"></td>
+        <td class="black"><img src="images/pedone bianco (1).png"></td>
         </tr>
 
 
@@ -138,14 +138,14 @@
         <tr>
 
  <th>1</th>
-        <td class="black"><img src="images/pedone bianco (1).png" ></td>
-        <td class="white"><img src="images/pedone bianco (1).png"></td>
-        <td class="black"><img src="images/pedone bianco (1).png"></td>
-        <td class="white"><img src="images/pedone bianco (1).png"></td>
-        <td class="black"><img src="images/pedone bianco (1).png"></td>
-        <td class="white"><img src="images/pedone bianco (1).png"></td>
-        <td class="black"><img src="images/pedone bianco (1).png"></td>
-        <td class="white"><img src="images/pedone bianco (1).png"></td>
+        <td class="black"><img src="images/torre.png" ></td>
+        <td class="white"><img src="images/cavallo bianco.png"></td>
+        <td class="black"><img src="images/alfiere.png"></td>
+        <td class="white"><img src="images/re.png"></td>
+        <td class="black"><img src="images/regina.bianca.png"></td>
+        <td class="white"><img src="images/alfiere.png"></td>
+        <td class="black"><img src="images/cavallo bianco.png"></td>
+        <td class="white"><img src="images/torre.png"></td>
         </tr>
 
 
